# graph

./: analisis_jaringan_dosen_infokom (1).ipynb  analisis_jaringan_dosen_infokom.ipynb  bigclam_membership.pkl  cluster_results.pkl  collab_graph.gml  corpus_per_dosen.csv  doc_embeddings_lsa.npy  dosen_clean.csv  dosen_infokom_final.csv  dosen_papers_scholar.csv  dosen_papers_scopus.csv  edges_collaboration.csv  final_ranking.csv  fuzzy_audit_log.json  graphsage_embeddings.npy  graphsage_model.pt  lda_dict.gensim  lda_model.gensim  lda_model.gensim.expElogbeta.npy  lda_model.gensim.id2word  lda_model.gensim.state  ml_advanced_final (2).ipynb  ml_analisis_dosen_infokom.ipynb  ml_output_dosen_profiles.csv  ml_output_lda_topics.csv  ml_output_link_predictions.csv  ml_output_topic_distribution.csv  neo4j_edges.csv  neo4j_import.cypher  neo4j_nodes.csv  node2vec_embeddings.pkl  phase11_summary.json  phase12_13_summary.json  phase2_comparison.json  phase2_lda_summary.json  phase3_summary.json  phase4_5_summary.json  phase6_7_summary.json  phase8_summary.json  phase9_10_summary.json  (+3 more)
__MACOSX/: ._dosen_infokom_final.csv  ._dosen_papers_scholar.csv  ._dosen_papers_scopus.csv
bertopic_model/: config.json  ctfidf.safetensors  ctfidf_config.json  topic_embeddings.safetensors  topics.json
